aggiunto uno spazio solo per capire meglio i 2 es

--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
     <div >
         <h3 id="checkLogIn"></h3>
     </div>
-    
 
+<div class="spazioPerDividere">
+
+</div>
 
     <h2>Ti stai annoiando? gioca contro il computer!</h2>
     <button class="submitButton" onclick="diceGame(); return false">PLAY</button>
